// Vitest Snapshot v1

exports[`CdrCheckbox > default configuration > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    
    <div
      class="cdr-checkbox__svg-box"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.673 18.669h.001L19.766 6.644a1 1 0 10-1.532-1.286l-9.3
            11.085-3.169-3.776a1 1 0 10-1.532 1.286l3.875 4.618a.999.999 0 001.565.099z"
          role="presentation"
        />
      </svg>
    </div>
    
    <span
      class="cdr-label-wrapper__content"
    >
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > using the default slot for label > with a custom content class > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    
    <div
      class="cdr-checkbox__svg-box"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.673 18.669h.001L19.766 6.644a1 1 0 10-1.532-1.286l-9.3
            11.085-3.169-3.776a1 1 0 10-1.532 1.286l3.875 4.618a.999.999 0 001.565.099z"
          role="presentation"
        />
      </svg>
    </div>
    
    <span
      class="cdr-label-wrapper__content custom-content-class"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > using the default slot for label > with a custom input class > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input custom-input-class"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    
    <div
      class="cdr-checkbox__svg-box"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.673 18.669h.001L19.766 6.644a1 1 0 10-1.532-1.286l-9.3
            11.085-3.169-3.776a1 1 0 10-1.532 1.286l3.875 4.618a.999.999 0 001.565.099z"
          role="presentation"
        />
      </svg>
    </div>
    
    <span
      class="cdr-label-wrapper__content"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > using the default slot for label > with a custom label class > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium custom-label-class"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    
    <div
      class="cdr-checkbox__svg-box"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.673 18.669h.001L19.766 6.644a1 1 0 10-1.532-1.286l-9.3
            11.085-3.169-3.776a1 1 0 10-1.532 1.286l3.875 4.618a.999.999 0 001.565.099z"
          role="presentation"
        />
      </svg>
    </div>
    
    <span
      class="cdr-label-wrapper__content"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;

exports[`CdrCheckbox > using the default slot for label > with an indeterminate prop > renders correctly 1`] = `
<div
  class="cdr-label-wrapper__container cdr-checkbox"
>
  <label
    class="cdr-label-wrapper cdr-label-wrapper--primary cdr-label-wrapper--medium"
  >
    
    <input
      class="cdr-checkbox__input"
      false-value="false"
      indeterminate="true"
      true-value="true"
      type="checkbox"
      value="false"
    />
    
    <span
      class="cdr-label-wrapper__figure"
    />
    
    <div
      class="cdr-checkbox__svg-box"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.673 18.669h.001L19.766 6.644a1 1 0 10-1.532-1.286l-9.3
            11.085-3.169-3.776a1 1 0 10-1.532 1.286l3.875 4.618a.999.999 0 001.565.099z"
          role="presentation"
        />
      </svg>
    </div>
    
    <span
      class="cdr-label-wrapper__content"
    >
      
      
      Label Test
      
      
    </span>
  </label>
</div>
`;
